add note for status change

--- a/scc-mvc/src/main/resources/templates/followticket.html
+++ b/scc-mvc/src/main/resources/templates/followticket.html
@@ -22,8 +22,17 @@
                         <h4 class="modal-title">Assign Ticket</h4>
                     </div>
                     <div class="modal-body">
-                        <select id="assign">
-                        </select>
+                        <div class="form group">
+                            <label for="assignnote">Note</label>
+                            <textarea id="assignnote" class="form-control"> </textarea>
+                        </div>
+                        <div class="form group">
+                            <label for="assign">User</label>
+                            <select class="form-control" id="assign">
+                            </select>
+                        </div>
+
+
                     </div>
                     <div class="modal-footer">
                         <button class="btn btn-primary " id="btnAssign">Assign</button>
@@ -42,12 +51,20 @@
                         <h4 class="modal-title">Change Ticket Status</h4>
                     </div>
                     <div class="modal-body">
-                        <select id="status">
-                            <option value="3">Open</option>
-                            <option value="4">Inprocess</option>
-                            <option value="5">Solving</option>
-                            <option value="6">Solved</option>
-                        </select>
+                        <div class="form group">
+                            <label for="statusnote">Note</label>
+                            <textarea id="statusnote" class="form-control"> </textarea>
+                        </div>
+                        <div class="form group">
+                            <label for="status">Status</label>
+                            <select class="form-control" id="status">
+                                <option value="3">Open</option>
+                                <option value="4">Inprocess</option>
+                                <option value="5">Solving</option>
+                                <option value="6">Solved</option>
+                            </select>
+                        </div>
+
                     </div>
                     <div class="modal-footer">
                         <button class="btn btn-primary " id="btnStatus">Change Status</button>
@@ -130,6 +147,11 @@
             </div>
             <div style="border-top: solid 1px lightgray;width: 250px;margin-top:8px" >
                 <h4 id="ticketnotedetail" style="width: 250px;word-wrap: break-word"><b>Note:</b></h4>
+            </div>
+            <div style="border-top: solid 1px lightgray;width: 250px;margin-top:8px" >
+                <h4 onclick="gettickethistory(ticketid)"  style="width: 250px;word-wrap: break-word; text-align: center"><b>History</b></h4>
+            </div>
+            <div id="tickethistory" style="max-height: 100px;width: 250px;display: none;overflow: auto">
             </div>
             <div style="border-top: solid 1px lightgray;width: 250px;margin-top:8px" >
                 <div id="ticketbutton" class="btn-group" style="margin-top: 10px;margin-left: 40px">
@@ -334,6 +356,53 @@
         })
     }
 
+    function gettickethistory(ticketid){
+        $("#tickethistory").slideToggle();
+        $.ajax({
+            url:"/gettickethistory",
+            type:"POST",
+            data:{"ticketid":ticketid},
+            success:function (data) {
+
+                for(var i =0;i<data.length;i++){
+                    var date = new Date(data[i].createdat).getDate();
+                    var month = new Date(data[i].createdat).getMonth() + 1;
+                    var year = new Date(data[i].createdat).getFullYear();
+                    switch (data[i].statusid) {
+                        case 1:
+                            status = "change " + data[i].ticketid + " to unassign";
+                            break;
+                        case 2:
+                            status = "assign " + data[i].ticketid + " to " + data[i].assignee;
+                            break;
+                        case 3:
+                            status = "change " + data[i].ticketid + " to open";
+                            break;
+                        case 4:
+                            status = "change " + data[i].ticketid + " to inprogess";
+                            break;
+                        case 5:
+                            status = "change " + data[i].ticketid + " to solving";
+                            break;
+                        case 6:
+                            status = "change " + data[i].ticketid + " to solved";
+                            break;
+                        case 7:
+                            status = "change " + data[i].ticketid + " to close";
+                            break;
+
+                    }
+                    $("#tickethistory").append(
+                            '<p>'+ date+'/'+month+'/'+year +','+ data[i].userid + ' ' + status +' with note: ' +data[i].note+'</p>'
+                    );
+                }
+            },
+            error:function () {
+                alert("fail to load ticket history")
+            }
+        })
+    }
+
     //assign ticket
     function assign(ticketid) {
         //Load list user de assign
@@ -342,10 +411,13 @@
             type:"GET",
             success:function (data) {
                 $("#assign").html("");
-                for (var i =0;i<data.length;i++)
+                for (var i =0;i<data.length;i++){
                     $("#assign").append(
                             '<option value="'+data[i].userid+'">'+data[i].firstname+ ' ' +data[i].lastname +'</option>'
                     );
+
+                }
+
             },
             error:function () {
                 alert("Fail to load list user");
@@ -356,9 +428,10 @@
         $('#assignModal').modal('toggle');
         $('#btnAssign').unbind().click(function () {
             var assignee = $('#assign').val();
+            var assignnote = $("#assignnote").val();
             $.ajax({
                 url:"/assignticket",
-                data:{"ticketid":ticketid,"assignee":assignee},
+                data:{"ticketid":ticketid,"assignee":assignee,"assignnote":assignnote},
                 type:"POST",
                 success:function (data) {
                     alert("assign ticket successful"+data.assignee);
@@ -374,12 +447,14 @@
 
     //change status
     function status(ticketid) {
+
         $('#statusModal').modal('toggle');
         $('#btnStatus').unbind().click(function () {
             var status = $('#status').val();
+            var statusnote = $("#statusnote").val();
             $.ajax({
                 url:"/changeticketstatus",
-                data:{"ticketid":ticketid,"status":status},
+                data:{"ticketid":ticketid,"status":status,"statusnote":statusnote},
                 type:"POST",
                 success:function (data) {
                     $('#statusModal').modal('toggle');
