--- a/scc-mvc/src/main/resources/static/css/scc-post.css
+++ b/scc-mvc/src/main/resources/static/css/scc-post.css
@@ -288,3 +288,12 @@
   width: 30px;
   border-radius: 3px;
 }
+
+
+input[type=number]::-webkit-inner-spin-button,
+input[type=number]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  margin: 0;
+}
