--- a/scc-mvc/src/main/resources/static/css/scc-post.css
+++ b/scc-mvc/src/main/resources/static/css/scc-post.css
@@ -1,130 +1,127 @@
-
 /* Chat widget (DEPRECATED - this will be removed in the next major release. Use Direct Chat instead)*/
 .chat {
-  padding: 0px 0px 0px 0px;
-
+    padding: 0px 0px 0px 0px;
 
 }
+
 .postlist {
-  height: 90vh;
-  padding: 0px;
-  background-color: white;
-  position: relative;
-  overflow: auto;
-  margin-right: 0px;
+    height: 90vh;
+    padding: 0px;
+    background-color: white;
+    position: relative;
+    overflow: auto;
+    margin-right: 0px;
 }
 
+.cmtbox {
+    height: 95vh;
+    padding: 0 0 2%;
+    background-color: white;
+    overflow-y: scroll;
 
-.cmtbox{
-  height:95vh;
-  padding:0 0 2%;
-  background-color: white;
-  overflow-y:scroll;
+}
+
+.chat .lcs {
+
+    color: gray;
+}
+
+.lcs p {
+    display: inline;
+    margin-right: 25%;
 
 }
 
-
-
-.chat .lcs{
-
-  color: gray;
+.lcs p:last-child {
+    margin-right: 0;
 }
 
-.lcs p{
-  display: inline;
-  margin-right: 25%;
-
-
-}
-.lcs p:last-child{
-  margin-right: 0;
-}
 .chat .item {
-  cursor:pointer;
-  height: 140px;
-  border-bottom: 1px solid #D3D3D3;
-  margin-bottom: 0px;
-  margin-top: 0px;
-  padding: 0px 20px 0px 15px;
-  margin-right: 0px;
+    cursor: pointer;
+    height: 140px;
+    border-bottom: 1px solid #D3D3D3;
+    margin-bottom: 0px;
+    margin-top: 0px;
+    padding: 0px 20px 0px 15px;
+    margin-right: 0px;
 }
 
-.chat .item:first-child
-{
-  border-top: 0px solid #D3D3D3;
+.chat .item:first-child {
+    border-top: 0px solid #D3D3D3;
 }
-.chat .item:hover
-{
-  background-color: lightblue;
 
+.chat .item:hover {
+    background-color: #F2F2F2;
 }
+
+#post-box .active {
+    background-color: lightskyblue;
+    color: black;
+}
+
 .chat .item:before,
 .chat .item:after {
-  content: " ";
-  display: table;
+    content: " ";
+    display: table;
 }
+
 .chat .item:after {
-  clear: both;
+    clear: both;
 }
+
 .chat .item > img {
-  width: 50px;
-  height: 50px;
-  margin-top:10px;
+    width: 50px;
+    height: 50px;
+    margin-top: 10px;
     border-radius: 3px;
-  border: 0px solid black;
+    border: 0px solid black;
 
 }
 
 .chat .item > .message {
-  margin-left: 65px;
-  margin-top: -50px;
-
-
-}
-.chat .item >.p{
-	padding-left: 3px;
-  overflow: hidden;
+    margin-left: 65px;
+    margin-top: -50px;
 
 }
+
+.chat .item > .p {
+    padding-left: 3px;
+    overflow: hidden;
+
+}
+
 .chat .item > .message > .name {
-  display: block;
-  font-weight: bold;
-  color: cornflowerblue;
+    display: block;
+    font-weight: bold;
+    color: cornflowerblue;
 
 }
 
 .box-input {
-  max-width: 200px;
+    max-width: 200px;
 }
-
-
-
 
 ::-webkit-scrollbar-track {
-  background: white;
-  border-left: 1px solid lightgray ;
+    background: white;
+    border-left: 1px solid lightgray;
 }
 
-
-.postdetail
-{
-  margin: 10px 20px 10px 20px;
-  background-color: white;
-    display:block;
-    overflow:auto;
-  padding: 10px 0px 10px 15px;
-  border-radius: 3px;
+.postdetail {
+    margin: 10px 20px 10px 20px;
+    background-color: white;
+    display: block;
+    overflow: auto;
+    padding: 10px 0px 10px 15px;
+    border-radius: 3px;
 }
 
-.postdetail img
-{
-  height: 50px;
-  width: 50px;
+.postdetail img {
+    height: 50px;
+    width: 50px;
 }
 
-.postdetail .author
-{
-  margin-top: -50px;
+.postdetail .author {
+    margin-top: -50px;
 
     font-weight: bold;
     margin-left: 60px;
@@ -132,165 +129,152 @@
 }
 
 /*--------------------------------COMMENT LIST------------------------------*/
-.cmtList{
-  margin: 10px 20px 45px 20px;
-  background-color: white;
-  overflow-y: auto;
-  border-radius: 3px;
+.cmtList {
+    margin: 10px 20px 45px 20px;
+    background-color: white;
+    overflow-y: auto;
+    border-radius: 3px;
 
 }
 
-.cmtList .cmt{
-  cursor:pointer;
-  max-heightheight: 20vh;
-  overflow: hidden;
-  border-bottom: 1px solid lightgray;
-  margin-bottom: 0px;
-  margin-top: 0px;
-  padding: 0px 0px 0px 0px;
-  margin-right: 0px;
+.cmtList .cmt {
+    cursor: pointer;
+    max-heightheight: 20vh;
+    overflow: hidden;
+    border-bottom: 1px solid lightgray;
+    margin-bottom: 0px;
+    margin-top: 0px;
+    padding: 0px 0px 0px 0px;
+    margin-right: 0px;
 }
-.cmtList :hover
-{
+
+.cmtList :hover {
     background-color: #F2F2F2;
 }
+
 .cmtList .cmtContent > img {
-  width: 50px;
-  height: 50px;
-  margin-top:10px;
-  border-radius: 3px;
-  border: 0px solid black;
+    width: 50px;
+    height: 50px;
+    margin-top: 10px;
+    border-radius: 3px;
+    border: 0px solid black;
 
 }
-.cmtList .cmtContent .message
-{
-  margin-top: -45px;
-  margin-left: 65px;
+
+.cmtList .cmtContent .message {
+    margin-top: -45px;
+    margin-left: 65px;
 }
 
-.sad
-{
-  font-size: 20px;
-  color: indianred;
+.sad {
+    font-size: 20px;
+    color: indianred;
 }
 
-.happy
-{
-  font-size: 20px;
-  color: #50D050
+.happy {
+    font-size: 20px;
+    color: #50D050
 }
 
-.question
-{
-  font-size: 20px;
-  color: #FFD700;
+.question {
+    font-size: 20px;
+    color: #FFD700;
 }
+
 /* PAGE LIST SELECTED*/
 .page-selected {
-  border: 1px solid cornflowerblue;
-  background-color: lightblue;
-}
-
-.page-unselected {
-  border: 0px solid lightgray;
-  border-bottom:  1px solid lightgray;
-  background-color: transparent ;
-}
-
-.pagination li:first-child a,.pagination li:last-child a {
-   border-radius: 0px;
- }
-
-.pagination li a{
-  font-weight: bold;
-  margin-left: 4px;
-}
-/*.cmtList .cmt  .message {*/
-  /*margin-left: 65px;*/
-  /*margin-top: 0px;*/
-
-
-/*}*/
-/*.cmtList .cmt >.p{*/
-  /*padding-left: 3px;*/
-  /*overflow: hidden;*/
-
-/*}*/
-/*.cmtList .cmt> .message > .name {*/
-  /*display: block;*/
-  /*font-weight: 600;*/
-/*}*/
-.chat
-{
-  list-style: none;
-  margin: 0;
-  padding: 0;
-}
-
-.chat li
-{
-  margin-bottom: 10px;
-  padding-bottom: 5px;
-
-}
-
-.chat li.left .chat-body
-{
-  margin-left: 35px;
-  background-color: white;
-  padding: 5px 10px 5px 5px;
-  border-radius: 5px;
-}
-
-.chat li.right .chat-body
-{
-  padding: 5px 5px 5px 10px;
-  margin-right: 35px;
-  background-color: lightblue;
-  border-radius: 5px;
-
-}
-.chat li.right .chat-body p
-{
-  color: black;
-}
-
-.chat li .chat-body p
-{
-  margin: 0;
-  color: #777777;
-}
-
-.panel .slidedown .glyphicon, .chat .glyphicon
-{
-  margin-right: 5px;
-}
-
-.panel-body
-{
-  overflow-y: scroll;
-
-}
-
-.chat li  span  img
-{
-  height: 30px;
-  width: 30px;
-  border-radius: 3px;
-}
-
-
-#post-box .active
-{
+    border: 1px solid cornflowerblue;
     background-color: lightblue;
 }
 
+.page-unselected {
+    border: 0px solid lightgray;
+    border-bottom: 1px solid lightgray;
+    background-color: transparent;
+}
+
+.pagination li:first-child a, .pagination li:last-child a {
+    border-radius: 0px;
+}
+
+.pagination li a {
+    font-weight: bold;
+    margin-left: 4px;
+}
+
+/*.cmtList .cmt  .message {*/
+/*margin-left: 65px;*/
+/*margin-top: 0px;*/
+
+/*}*/
+/*.cmtList .cmt >.p{*/
+/*padding-left: 3px;*/
+/*overflow: hidden;*/
+
+/*}*/
+/*.cmtList .cmt> .message > .name {*/
+/*display: block;*/
+/*font-weight: 600;*/
+/*}*/
+.chat {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+
+.chat li {
+    margin-bottom: 10px;
+    padding-bottom: 5px;
+
+}
+
+.chat li.left .chat-body {
+    margin-left: 35px;
+    background-color: white;
+    padding: 5px 10px 5px 5px;
+    border-radius: 5px;
+}
+
+.chat li.right .chat-body {
+    padding: 5px 5px 5px 10px;
+    margin-right: 35px;
+    background-color: lightblue;
+    border-radius: 5px;
+
+}
+
+.chat li.right .chat-body p {
+    color: black;
+}
+
+.chat li .chat-body p {
+    margin: 0;
+    color: #777777;
+}
+
+.panel .slidedown .glyphicon, .chat .glyphicon {
+    margin-right: 5px;
+}
+
+.panel-body {
+    overflow-y: scroll;
+
+}
+
+.chat li span img {
+    height: 30px;
+    width: 30px;
+    border-radius: 3px;
+}
+
+
+
 input[type=number]::-webkit-inner-spin-button,
 input[type=number]::-webkit-outer-spin-button {
-  -webkit-appearance: none;
-  -moz-appearance: none;
-  appearance: none;
-  margin: 0;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    margin: 0;
 }
 
 /*cmt */
@@ -299,6 +283,7 @@ input[type=number]::-webkit-outer-spin-button {
     margin-right: 3px;
 
 }
+
 ::-webkit-scrollbar-thumb {
     background: dimgray;
     border-radius: 0px;
