--- a/scc-mvc/src/main/resources/templates/customercare.html
+++ b/scc-mvc/src/main/resources/templates/customercare.html
@@ -317,26 +317,40 @@
             <div id="comment-box" class="cmtList">
                 <!-- This is comment list -->
             </div>
-            <div style="bottom: 45px; position: fixed; padding: 5px 10px 5px 10px ;background-color: white; border-right: 1px solid lightgray; border-top: 1px solid lightgray" class="collapse" id="sort-option">
+            <div style="bottom: 45px; position: fixed; padding: 5px 10px 5px 10px ;background-color: white; border-right: 1px solid lightgray; border-top: 1px solid lightgray"
+                 class="collapse" id="sort-option">
                 <div class="inline" style="margin-right: 10px">Sort comments by:</div>
                 <div class="radio inline" style="margin-right: 10px">
-                    <label><input type="radio" checked="checked" value="" name="optradio" onclick="sortCommentBy=1">Question</label>
+                    <label><input type="radio" checked="checked" onclick="questSortClick()"
+                                  name="optradio">Question</label>
                 </div>
                 <div class="radio inline" style="margin-right: 10px">
-                    <label><input type="radio" value="" name="optradio" onclick="sortCommentBy=2">Negative</label>
+                    <label><input type="radio" name="optradio" onclick="negSortClick()">Negative</label>
+                </div>
+                <div class="radio inline" style="margin-right: 10px">
+                    <label><input type="radio" name="optradio" onclick="timeSortClick()">Time</label>
                 </div>
             </div>
             <div style="padding: 0; margin: 0; width: 100%; background-color: white; position: fixed; bottom: 0px; height: 45px; border-top: 1px solid lightgray">
                 <ul id="page-nav" class="pagination" style="margin-left: 10px; margin-top: 5px; padding: 0">
-                    <li data-toggle="collapse" data-target="#sort-option" id="more"><a class="fa fa-ellipsis-v"></a>
+                    <li data-toggle="collapse" data-target="#sort-option" id="more"><a href="#"
+                                                                                       class="fa fa-ellipsis-v"></a>
                     </li>
                     <li onclick="previousCommentPage()"><a href="#"><span class="fa fa-chevron-left"></span></a></li>
                     <li onclick="$('#comment-page-current').focus()"><a href="#"
                                                                         style="padding-bottom: 5px;padding-top: 5px">
-                        <input type="number" id="comment-page-current" onkeypress="checkNumberInputAndEnter(event)" f
+                        <input type="number" id="comment-page-current" onkeypress="checkNumberInputAndEnter(event)"
                                style="width: 25px; text-align:center; border: none" value="1">/&nbsp;<span
                             id="comment-page-count">30</span> Pages</a></li>
                     <li onclick="nextCommentPage()"><a href="#"><span class="fa fa-chevron-right"></span></a></li>
+                    <li>
+                        <a style="padding-bottom: 5px;padding-top: 5px">
+                            <input style="margin: 0px; border: none" type="text" value=""
+                                   placeholder="Search for comments"/>
+                            <span style="margin-left: 10px" class="fa fa-search"></span>
+                        </a>
+
+                    </li>
                 </ul>
             </div>
         </section>
